--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </article>
 
     <footer>
-      <p>&copy; Musicon</p>
+      <p>&copy; Musicon ltd</p>
     </footer>
     <script src="main.js"></script>
   </body>
